TailwindCSS & NextUI implementation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- FONT FAMILY ADD ONS IN TAILWIND.CONFIG.JS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&family=Quicksand:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!----------------->
 
     <title>National Diaries</title>
