--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,12 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&family=Quicksand:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <!----------------->
+    <!-- BOOTSTRAP 5 FONT ICON CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+     <!----------------->
 
     <title>National Diaries</title>
   </head>
