--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,10 +22,10 @@
       rel="stylesheet"
     />
     <!-- BOOTSTRAP 5 FONT ICON CDN -->
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
-    /> -->
+    />
      <!----------------->
 
     <title>National Diaries</title>
